--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <h1>TravelWorthy</h1>
+    <h1>FunTimeHotel</h1> 
     <div id="info">
       <h2>hotel availability</h2>
       <div id="hotel1"></div>
